--- a/htmlExample/index.html
+++ b/htmlExample/index.html
@@ -41,5 +41,18 @@
         </p>
         <p><button>提交订单</button></p>
     </form>
+    <form name="file">
+        <input type="file" name="image">
+        <button onclick="document.forms.file.reset();">reset file upload</button>
+    </form>
+    <p>一个好看的表单</p>
+    <form style="display:none">
+        <input type="file" name="image" id="fileUpload">
+    </form>
+    <label for="fileUpload">
+        选择图片上传,点击苹果logo上传图片：
+        <img src="https://images.apple.com/v/mac/home/y/images/home/imac_pro_medium_2x.jpg" style="width:100px;height:100px">
+    </label>
+
 </body>
 </html>
