--- a/htmlExample/index.html
+++ b/htmlExample/index.html
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
+    <style>
+        input{
+            border:1px solid #aaa;
+        }
+    </style>
 </head>
 <body>
     <p>Live Example</p>
@@ -54,5 +59,24 @@
         <img src="https://images.apple.com/v/mac/home/y/images/home/imac_pro_medium_2x.jpg" style="width:100px;height:100px">
     </label>
 
+    <form id="experiment">
+
+        <fieldset>
+        <legend>输入框实验类型</legend>
+            <input type="number">
+            <input type="tel">
+            <input type="email">
+            <input type="text">
+            <input type="range">
+            <input type="time">
+            <input type="date">
+            <input type="color">
+            <input type="file">
+            <input type="search">
+            <input type="password">
+            <input type="submit">    
+            <input type="button">
+        </fieldset>
+    </form> 
 </body>
 </html>
