--- a/htmlExample/index.html
+++ b/htmlExample/index.html
@@ -63,19 +63,23 @@
 
         <fieldset>
         <legend>输入框实验类型</legend>
-            <input type="number">
-            <input type="tel">
-            <input type="email">
-            <input type="text">
-            <input type="range">
-            <input type="time">
-            <input type="date">
-            <input type="color">
-            <input type="file">
-            <input type="search">
-            <input type="password">
-            <input type="submit">    
-            <input type="button">
+            <p><input type="number"></p>
+            <p><input type="tel"></p>
+            <p><input type="email"></p>
+            <p><input type="text"></p>
+            <p><input type="checkbox"></p>
+            <p><input type="radio"></p> 
+            <p><input type="textarea"></p>                       
+            <p><input type="selection"></p>            
+            <p><input type="range"></p>
+            <p><input type="time"></p>
+            <p><input type="date"></p>
+            <p><input type="color"></p>
+            <p><input type="file"></p>
+            <p><input type="search"></p>
+            <p><input type="password"></p>
+            <p><input type="submit"></p>
+            <p><input type="button"></p>
         </fieldset>
     </form> 
 </body>
