--- a/htmlExample/index.html
+++ b/htmlExample/index.html
@@ -81,5 +81,22 @@
             <p><input type="button"></p>
         </fieldset>
     </form> 
+
+    <form id="select">
+        <select name="course" id="course">
+            <option>课程选择</option>
+            <optgroup label="1.DOM基础">
+                <option value="1.1">文档树</option>
+                <option value="1.3">元素遍历</option>
+                <option value="1.4">样式操作</option>
+                <option value="1.5">属性操作</option>  
+            </optgroup>
+            <optgroup label="2.事件模型">
+                <option value="2.1">事件类型</option>
+                <option value="2.2">事件模型</option>
+                <option value="2.3">事件应用</option>
+            </optgroup>
+        </select>
+    </form>
 </body>
 </html>
