--- a/htmlExample/index.html
+++ b/htmlExample/index.html
@@ -98,5 +98,55 @@
             </optgroup>
         </select>
     </form>
+
+    <div>级联选择器</div>
+    <hr>
+    <form action="">
+        <select name="chapter" id="chapterSelect">
+            <option>请选择章节目录</option>
+        </select>
+        <select name="section" id="sectionSelect">
+            <option>请选择节目录</option>
+        </select>
+    </form>
+    <script>
+        // 级联下拉选择器 onchange remove, add方法
+        var chapters = [
+            {text:'1.DOM基础', value:'1'},
+            {text:'2.事件模型', value:'2'}
+        ];
+        var sections = {
+            1:[
+                {text:'1.1 文档树', value:'1.1'},
+                {text:'1.1 文档树', value:'1.2'},
+                {text:'1.1 文档树', value:'1.3'},
+                {text:'1.1 文档树', value:'1.4'}                
+            ],
+            2:[
+                {text:'2.1 文档树', value:'2.1'},
+                {text:'2.2 文档树', value:'2.2'},
+                {text:'2.3 文档树', value:'2.3'}
+            ]
+        };
+        var chapterSelect = document.getElementById('chapterSelect');
+        var sectionSelect = document.getElementById('sectionSelect');
+        function fillSelect(select, list){
+            for(var i=select.length-1;i>0;i--){
+                select.remove(i);
+            }
+            list.forEach(function(data){
+                var option = new Option(data.text, data.value);
+                select.add(option);
+            })
+        }
+        fillSelect(chapterSelect, chapters);
+        chapterSelect.addEventListener(
+            'change',function(event){
+                var value = event.target.value;
+                    list = sections[value]||[];
+                fillSelect(sectionSelect, list);
+            }
+        )
+    </script>
 </body>
 </html>
