--- a/htmlExample/index.html
+++ b/htmlExample/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,14 +10,16 @@
     <style>
         input{
             border:1px solid #aaa;
+            border-radius: 2px;
+            margin-top:5px;
+            line-height:10px;
+        }
+        form{
+            padding:10px;
         }
     </style>
 </head>
 <body>
-    <p>Live Example</p>
-    <button onclick="delayedAlert();">Show an alert box after two seconds</button>
-    <p></p>
-    <button onclick="clearAlert();">Cancel alert before it happens</button>
     <form method="post"
          action="https://pizza.example.com/order"
          enctype="application/x-www-form-urlencoded"
@@ -51,6 +51,7 @@
         <button onclick="document.forms.file.reset();">reset file upload</button>
     </form>
     <p>一个好看的表单</p>
+    <hr>
     <form style="display:none">
         <input type="file" name="image" id="fileUpload">
     </form>
@@ -108,6 +109,9 @@
         <select name="section" id="sectionSelect">
             <option>请选择节目录</option>
         </select>
+        <select name="section" id="miniSelect">
+                <option>请选择节目录</option>
+        </select>
     </form>
     <script>
         // 级联下拉选择器 onchange remove, add方法
@@ -128,22 +132,43 @@
                 {text:'2.3 文档树', value:'2.3'}
             ]
         };
+        var minisections = {
+            '1.1':[
+                {text:'1.1.1 文档树', value:'1.1'},
+                {text:'1.1.2 文档树', value:'1.2'},
+                {text:'1.1.3 文档树', value:'1.3'},
+                {text:'1.1.4 文档树', value:'1.4'}                
+            ],
+            '1.2':[
+                {text:'2.1.1 文档树', value:'2.1'},
+                {text:'2.2.2 文档树', value:'2.2'},
+                {text:'2.3.3 文档树', value:'2.3'}
+            ]
+        };
         var chapterSelect = document.getElementById('chapterSelect');
         var sectionSelect = document.getElementById('sectionSelect');
+        //定义public method to fill the selection with a list of items
         function fillSelect(select, list){
+            //填充之前，先做清理动作；
+            //因为集是动态的，所以从后往前遍历：
             for(var i=select.length-1;i>0;i--){
                 select.remove(i);
             }
+            //此时添加填充正确的数据：
             list.forEach(function(data){
                 var option = new Option(data.text, data.value);
                 select.add(option);
             })
         }
+        //填充章信息
         fillSelect(chapterSelect, chapters);
+        //为章注册事件：
         chapterSelect.addEventListener(
+            //监听change事件；
             'change',function(event){
                 var value = event.target.value;
                     list = sections[value]||[];
+                //填充节信息；
                 fillSelect(sectionSelect, list);
             }
         )
