--- a/htmlExample/index.html
+++ b/htmlExample/index.html
@@ -41,6 +41,7 @@
             <label><input type="checkbox" name="topping" value="onion">洋葱</label>
             <label><input type="checkbox" name="topping" value="mushroom">蘑菇</label>            
         </fieldset>
+        <input type="image">
         <p>
             <label>配送时间<input type="time" min="11:00" max="21:00" step="900" name="delivery"></label>
         </p>
